All restaurants view - fixed display on IE

--- a/assets/css/restaurant_index.scss
+++ b/assets/css/restaurant_index.scss
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   padding: 0px;
+  height: 100%;
 }
 
 div.restaurant-thumbnail > img.restaurant-image, div.restaurant-caption {
@@ -27,6 +28,10 @@ div.restaurant-thumbnail > img.restaurant-image {
   border-radius: 4px 4px 0 0;
 }
 
+:-ms-fullscreen, :root div.restaurant-thumbnail > img.restaurant-image {
+  min-height: 175px;
+}
+
 .thumbnail .restaurant-caption.caption {
   padding-top: 0px;
 }
@@ -39,8 +44,4 @@ div.restaurant-thumbnail > img.restaurant-image {
 .restaurants-flex-container {
   display: flex;
   flex-wrap: wrap;
-}
-
-.restaurant-flex-item {
-  display: flex;
 }
